{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 293,
  "lineage": "4a2c33f9-0124-8a37-18b9-460cc2d09865",
  "resources": [
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tomcat_instance",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-001928d448e85f48a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001928d448e85f48a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f266aabcbe9021bb",
            "private_dns": "ip-10-0-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_ip": "44.195.1.192",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06d483039b3edacc3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0912ef53d34443cd2",
            "tags": {
              "Environment": "dev",
              "Name": "instance1-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "instance1-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c85f1a972d4358a1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.VPC"
          ]
        },
        {
          "index_key": "instance2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:180344874861:instance/i-0dd37da9bc6cbf3bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd37da9bc6cbf3bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f21bc5dd01c7e7e",
            "private_dns": "ip-10-0-2-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.136",
            "public_ip": "3.83.105.152",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017c500b79e953c19",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f38152534c8ba6a2",
            "tags": {
              "Environment": "dev",
              "Name": "instance2-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "instance2-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c85f1a972d4358a1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_key_pair.key_generation",
            "module.web.aws_security_group.security_group",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:internet-gateway/igw-0e418d6c3ef27a2aa",
            "id": "igw-0e418d6c3ef27a2aa",
            "owner_id": "180344874861",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-gateway-dev"
            },
            "tags_all": {
              "Name": "terraform-gateway-dev"
            },
            "vpc_id": "vpc-015210277e6ebc056"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:route-table/rtb-04d3874be3e9142cc",
            "id": "rtb-04d3874be3e9142cc",
            "owner_id": "180344874861",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e418d6c3ef27a2aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformRouteTable-dev"
            },
            "tags_all": {
              "Name": "TerraformRouteTable-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-015210277e6ebc056"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f62f179966cd313a",
            "region": "us-east-1",
            "route_table_id": "rtb-04d3874be3e9142cc",
            "subnet_id": "subnet-0912ef53d34443cd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_route_table.route_table",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e46c8aeb35c64aac",
            "region": "us-east-1",
            "route_table_id": "rtb-04d3874be3e9142cc",
            "subnet_id": "subnet-0f38152534c8ba6a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_internet_gateway.gateway",
            "module.web.aws_route_table.route_table",
            "module.web.aws_subnet.public",
            "module.web.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:security-group/sg-0c85f1a972d4358a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c85f1a972d4358a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "180344874861",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TomcatSecurityGroup-dev"
            },
            "tags_all": {
              "Name": "TomcatSecurityGroup-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-015210277e6ebc056"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:subnet/subnet-0912ef53d34443cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0912ef53d34443cd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180344874861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "AppSubnet1-dev-dev"
            },
            "tags_all": {
              "Name": "AppSubnet1-dev-dev"
            },
            "vpc_id": "vpc-015210277e6ebc056"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:subnet/subnet-0f38152534c8ba6a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f38152534c8ba6a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180344874861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "AppSubnet2-dev-dev"
            },
            "tags_all": {
              "Name": "AppSubnet2-dev-dev"
            },
            "vpc_id": "vpc-015210277e6ebc056"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.web.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "module.web.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180344874861:vpc/vpc-015210277e6ebc056",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0fab16c49172b32",
            "default_route_table_id": "rtb-0f1321c923fc31ebf",
            "default_security_group_id": "sg-0422c289226e91ae9",
            "dhcp_options_id": "dopt-055139cc1912ba6ad",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015210277e6ebc056",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1321c923fc31ebf",
            "owner_id": "180344874861",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-vpc-dev"
            },
            "tags_all": {
              "Name": "terraform-vpc-dev"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}